--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -41,7 +41,7 @@ This process happens in real-time, so the replica server's copy of the data is a
 
 ## How CloudQuery Uses Postgres Logical Replication to Sync Postgres to Any Other Destination
 
-CloudQuery PostgreSQL source plugin gives you the ability to sync data/changes in real time from a PostgreSQL database, directly to any
+CloudQuery PostgreSQL source plugin provides the ability to sync data and changes in real time from a PostgreSQL database, directly to any
 of the supported [destinations](https://www.cloudquery.io/docs/plugins/destinations/overview), with the need for Kafka or any intermediary (You can still stream to Kafka or Google PubSub).
 This gives a much simpler setup to operate by just running one CloudQuery binary!
 
