--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -45,7 +45,7 @@ CloudQuery PostgreSQL source plugin provides the ability to sync data and change
 of the supported [destinations](/docs/plugins/destinations/overview), without the need for Kafka or any intermediary (You can still stream to Kafka or Google PubSub).
 This gives a much simpler setup to operate by just running one CloudQuery binary!
 
-In this section, we will go through how our CloudQuery PostgreSQL source plugin works internally. (For running and configuration, refer to the docs.)
+In the following section, we will go through how our CloudQuery PostgreSQL source plugin works internally. (For running and configuring, refer to the [docs](https://www.cloudquery.io/docs/quickstart/macOS).)
 
 ### Set `wal_level` to logical
 
