--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -45,7 +45,7 @@ CloudQuery PostgreSQL source plugin provides the ability to sync data and change
 of the supported [destinations](/docs/plugins/destinations/overview), without the need for Kafka or any other intermediary. (You can still stream to Kafka or Google PubSub.)
 This gives a much simpler setup to operate: just run one CloudQuery binary!
 
-In the following section, we will go through how our CloudQuery PostgreSQL source plugin works internally. (For running and configuring, refer to the [docs](https://www.cloudquery.io/docs/quickstart/macOS).)
+In the following section, we will go through how our CloudQuery PostgreSQL source plugin works internally. (For running and configuring, refer to the [docs](https://www.cloudquery.io/docs/quickstart).)
 
 ### Set `wal_level` to logical
 
