--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -51,7 +51,7 @@ In the following section, we will go through how our CloudQuery PostgreSQL sourc
 
 To use logical replication, you will need to make sure you started your database with `wal_level`.
 
-See our docs on how to set `wal_level` to logical in various environments.
+See [our documentation](/docs/plugins/sources/postgresql/cdc) on how to set `wal_level` to logical in various environments.
 
 ### Create a publication
 
