--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -1,5 +1,5 @@
 ---
-title: PostgreSQL CDC (Change-Data-Capture) to any destination
+title: Stream Changes from PostgreSQL to Any Destination with Change Data Capture
 tag: announcement
 date: 2023/02/20
 description: >-
