--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -4,7 +4,7 @@ tag: announcement
 date: 2023/02/20
 description: >-
   In this blog we will talk about how to stream changes from PostgreSQL
-  to any destination with CloudQuery and no queue or Kafka required.
+  to any destination with CloudQuery.
 author: yevgenypats
 ---
 
