--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -17,7 +17,7 @@ One of the most powerful features of PostgreSQL is its ability to replicate data
 ## What is CDC?
 
 [CDC (Change-Data-Capture)](https://en.wikipedia.org/wiki/Change_data_capture) is a set of design patterns in databases where one can track changes to the data and act upon it.
-In PostgreSQL, CDC can be achieved via a feature called logical replication.
+In PostgreSQL, CDC can be achieved using the [logical replication](https://www.postgresql.org/docs/current/logical-replication.html) feature.
 
 ## What is Logical Replication?
 
