--- a/website/pages/blog/postgres-cdc-to-any-destination.mdx
+++ b/website/pages/blog/postgres-cdc-to-any-destination.mdx
@@ -12,7 +12,8 @@ import { BlogHeader } from "../../components/BlogHeader"
 
 <BlogHeader/>
 
-One of the most powerful features of PostgreSQL is its ability to replicate data, and in this article we'll take a deep dive into the topic of logical replication.
+One of the most powerful features of PostgreSQL is its ability to replicate data,
+and in this article we'll take a deep dive into the topic of logical replication (For running CloudQuery PostgreSQL CDC source plugin take a look at our [docs](../docs/plugins/source/postgresql/overview)).
 
 ## What is CDC?
 
