Integrations page mostly working

--- a/website/pages/integrations/aws.mdx
+++ b/website/pages/integrations/aws.mdx
@@ -2,7 +2,9 @@
 title: AWS Integration
 ---
 
-import Integration from "../../components/pages/integration";
+import Integration from "../../components/pages/IntegrationSource";
 import {getPlugin} from "../../components/pluginData";
 
-<Integration source={getPlugin("aws")} />
+<Integration
+  source={getPlugin("aws")}
+/>
