linting + code review coomments

--- a/website/pages/docs/plugins/sources/awspricing/overview.mdx
+++ b/website/pages/docs/plugins/sources/awspricing/overview.mdx
@@ -33,7 +33,7 @@ This is the (nested) spec used by the AWS Pricing source plugin.
 - `region_codes` ([]string) (default: empty. Will sync data for all regions)
 
   Specify which region_codes to sync data for. No regular expressions are supported, matches must be an exact match
-  Note: This is not just AWS Commercial regions. It includes Wavelength Zones and and regions in other partitions (Gov Cloud and China). 
+  Note: This is not just AWS Commercial regions. It includes Wavelength Zones and regions in other partitions (Gov Cloud and China). 
 
 - `offer_codes` ([]string) (default: empty. Will sync data for all services)
 
