Add logos and destination pages

--- a/website/pages/integrations/aws.mdx
+++ b/website/pages/integrations/aws.mdx
@@ -6,5 +6,5 @@ import Integration from "../../components/pages/IntegrationSource";
 import {getPlugin} from "../../components/pluginData";
 
 <Integration
-  source={getPlugin("aws")}
+  source={getPlugin("source", "aws")}
 />
